<resources>
    <string name="action_toggle_control">Toggle control: %1$s</string>

    <string name="app_name">Elementary</string>

    <string name="btn_new_game">Start Game</string>
    <string name="btn_quit_confirm">Quit</string>
    <string name="btn_quit_cancel">Cancel</string>

    <string name="email_default">R.P.Cooper1@edu.salford.ac.uk</string>

    <string name="err_not_implemented">Not Implemented!</string>
    <string name="err_missing_name">A playerName must be entered before starting a game</string>

    <string name="hint_enter_name">Enter Player Name</string>

    <string name="nav_new_game">New Game</string>
    <string name="nav_high_scores">High Scores</string>
    <string name="nav_quit">Quit</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="txt_new_game">New Game</string>
    <string name="txt_quit_game">Quit Game?</string>

    <string name="txt_title_game_left">Score: %1$d</string>
    <string name="txt_title_game_right">Lives: %1$d</string>

    <string name="txt_correct_answer">Correct! :D</string>
    <string name="txt_wrong_answer">Wrong! :(</string>

    <string name="txt_ele_answer">%1$s:\n%2$s</string>
    <string name="txt_welcome_game">Welcome %1$s !</string>
    <string name="txt_game_over">Game Over!</string>
    <string name="title_activity_game">GameActivity</string>

    <string name="action_settings">Settings</string>
    <string name="numeric">%1$d</string>

    <string name="pref_sound_title">Sound Settings</string>
    <string name="pref_sound_music">Music Volume</string>
    <string name="pref_sound_effects">Effects Volume</string>
    <string name="pref_vib_title">Vibrate Settings</string>
    <string name="pref_vib_toggle">Toggle Vibration</string>
    <string name="ins_hd_main">How to Play</string>
    <string name="ins_hd_basic_gameplay">Basic Game Play</string>
    <string name="ins_basic_gameplay">
        1. When you start a new game, a random element will be displayed.
        \n2. There are %1$d properties to choose from - to get points simply drag or tilt the
        element into the property which belongs to it.
        \n3. The more answers you get right in a row, the more points you can get: +%2$d every
        right answer!
        \n4. If you get 5 answers right in a row, you get an additional life!
        \n5. But watch out, if you get an answer wrong, you\'ll lose a life and your points
        increment will reset to %3$d.
    </string>
    <string name="ins_hd_control">Controls</string>
    <string name="ins_control">
        You can switch between two different ways to move your element.
        \n1. Drag the element.
        \n2. Tilt the screen.
        \nTo switch between controls, simply give me a shake or select the other method from the menu.
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_close">close</string>
    <string name="txt_quit_query">Are you sure you wish to quit?</string>
</resources>
