<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_sound_title">

        <android.support.v7.preference.SeekBarPreference
            android:defaultValue="4"
            android:key="pref_volume_music"
            android:max="10"
            android:title="@string/pref_sound_music" />

        <android.support.v7.preference.SeekBarPreference
            android:key="pref_volume_effects"
            android:title="@string/pref_sound_effects"
            android:defaultValue="8"
            android:max="10" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_vib_title">

        <android.support.v7.preference.SwitchPreferenceCompat
            android:key="pref_toggle_vibrate"
            android:title="@string/pref_vib_toggle"
            android:defaultValue="true" />

    </PreferenceCategory>

</PreferenceScreen>