<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edit_name"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_gravity="center"
    android:layout_centerVertical="true"
    android:layout_centerHorizontal="true"
    android:orientation="vertical"
    android:background="@drawable/layout_dialog">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/txt_new_game"
        style="@style/elementary_header"
        android:background="@drawable/ele_header" />

    <EditText
        android:id="@+id/edt_enter_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_new_game_name"
        android:hint="@string/hint_enter_name"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:textColorHint="@color/new_player_hint"
        android:textColorLink="@android:color/black"
        android:backgroundTint="@color/new_player_hint"
        android:textCursorDrawable="@drawable/ic_menu_send" />

    <Button
        android:id="@+id/btn_create_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/margin_new_game_name"
        android:theme="@style/AppTheme.Button"
        android:text="@string/btn_new_game" />

</LinearLayout>